--- a/CoffeeCup/css/mediaqueries2.css
+++ b/CoffeeCup/css/mediaqueries2.css
@@ -438,13 +438,9 @@
         overflow-x: hidden;       
     }
     .logo .heading{
-        color:#6f4e37;
+       
         font-size:3rem;
         
-    }
-    .img-logo{
-        background:linear-gradient(to bottom, #6f4e37,#350300);
-        border-radius:100%;
     }
     .italic-title h1{
         letter-spacing:.6rem;
@@ -1799,7 +1795,7 @@
        display:none;
     }  
 }
-@media(orientation:landscape) and (min-height:100px) and (max-height:800px){
+/* @media(orientation:landscape) and (min-height:100px) and (max-height:800px){
     .homepage{
         height:90vmax;
     }
@@ -1820,5 +1816,5 @@
     .bottom-part{
         min-height:60vmax;
     }
-}
+} */
 
