--- a/CoffeeCup/css/style2.css
+++ b/CoffeeCup/css/style2.css
@@ -90,7 +90,7 @@ html{
     background-repeat:no-repeat;
     overflow: hidden;
     background-position:right; 
-    height:100%;
+    /* height:100%; */
 }
 .navbar, .logo{
     padding-top:13rem;
@@ -128,16 +128,16 @@ html{
     font-weight: 500;
 }
 .pg-content{
-    margin-top:10rem;
+    margin-top:7rem;
     margin-left:10rem;
-    padding-bottom: 8rem;
+    padding-bottom: 15rem;
     
 }
 .pg-content .coffee-type h1{
     font-size:20.3rem ;
     font-weight: 500;
     letter-spacing:1px;
-    margin-bottom:2.8rem;
+    margin-bottom:2rem;
 }
 .quote{
     color:#ff4b00;
@@ -150,7 +150,7 @@ html{
 }
 .paragraph{
     width:455px;
-    margin:4.5rem 0 4.5rem 0;
+    margin:3.5rem 0 3.5rem 0;
 }
 .paragraph p{
     font-family: 'Roboto', sans-serif;
