--- a/CoffeeCup/css/mediaqueries2.css
+++ b/CoffeeCup/css/mediaqueries2.css
@@ -887,7 +887,8 @@
     }
     .coffee-type .italic-title{
         text-align:center;
-        margin-bottom:2rem;
+        margin-bottom:0rem;
+        margin-top:1rem;
     }
     .item{
         display:table;
