--- a/CoffeeCup/css/mediaqueries2.css
+++ b/CoffeeCup/css/mediaqueries2.css
@@ -922,7 +922,7 @@
         background:#122341;
         height:auto;
         padding: 2rem 0 2rem 0;
-        margin:2rem 0 2rem 0;
+        margin:2rem 0 0 0;
         position:relative;
     }
     .shape-playground-1{
@@ -964,7 +964,7 @@
         background:#122341;
         height:auto;
         padding: 2rem 0 2rem 0;
-        margin:2rem 0 2rem 0;
+        margin:2rem 0 0 0;
         width:100%;
         order:2;
     }
@@ -1243,7 +1243,7 @@
         background:#122341;
         height:auto;
         padding: 2rem 0 2rem 0;
-        margin:2rem 0 2rem 0;
+        margin:2rem 0 0rem 0;
         position:relative;
     }
     .shape-playground-1{
@@ -1285,7 +1285,7 @@
         background:#122341;
         height:auto;
         padding: 2rem 0 2rem 0;
-        margin:2rem 0 2rem 0;
+        margin:2rem 0 0rem 0;
         width:100%;
         order:2;
     }
