--- a/CoffeeCup/css/mediaqueries2.css
+++ b/CoffeeCup/css/mediaqueries2.css
@@ -910,6 +910,12 @@
         left:0;
         transform:translateX(10%);
     }
+    .coffee:hover{
+        animation:none;
+    }
+    .cold-coffee-img:hover{
+        animation:none;
+    }
     .cold-coffee-img{
         left:50%;
         transform:translate(60%,0%);
@@ -1234,6 +1240,12 @@
     .cold-coffee-img{
         left:50%;
         transform:translate(60%,0%);
+    }
+    .coffee:hover{
+        animation:none;
+    }
+    .cold-coffee-img:hover{
+        animation:none;
     }
     .coffee-type{
         justify-content:center;
@@ -1561,6 +1573,12 @@
         .cold-coffee-img{
             left:45%;
             transform:translate(55%,0%);
+        }
+        .coffee:hover{
+            animation:none;
+        }
+        .cold-coffee-img:hover{
+            animation:none;
         }
         .coffee-type{
             justify-content:center;
@@ -1897,6 +1915,12 @@
         left:45%;
         transform:translate(55%,0%);
     }
+    .coffee:hover{
+        animation:none;
+    }
+    .cold-coffee-img:hover{
+        animation:none;
+    }
     .coffee-type{
         justify-content:center;
         align-items:center;
@@ -2146,354 +2170,360 @@
         font-size:6rem;
         letter-spacing:.4rem;
     }
-        .logo{
-            display:none;
-        }
-     
-        .order-btn h1{
-            font-size:3.2rem;
-        }
-        .homepage{
-            background: linear-gradient(to bottom, hsla(0, 54%, 27%, 0.2), hsla(40, 1%, 55%, 0.1)), url('../img/homepage_background.png');
-            background-repeat: no-repeat;
-            background-size:cover;
-            background-position: center;
-            height:auto;
-        }
-        .paragraph{
-            width:100%;
-            text-align:left;
-            margin: 2.5rem 0 2.5rem 0;
-        }
-        .paragraph p{
-            font-weight: 400;
-        }
-        .pg-content{
-            margin-top:0;
-            position:static;
-            padding-bottom: 5rem;
-            padding-top:15rem;
-            margin-left:1.5rem;
-        }
-        .pg-content .italic-title h1{
-            text-align:center;
-        }
-        .navbar{
-            position:fixed;
-            background:#122341;
-            z-index: 10;
-            width:100%;
-            left:0;
-            padding-top:0;
-        }
-        .navbar-toggler:focus,
-        .navbar-toggler:active,
-        .navbar-toggler-icon:focus {
-            outline: none;
-            box-shadow: none;
-        }
-        .navbar-toggler{
-            font-size:2.25rem;
-            width:100%;
-            text-align:left;
-            height:80px;
-        }
-        .nav-items{
-            float:right;
-            text-align:right;
-        }
-        #hamburger_menu{
-            line-height:4rem;
-            color:white;
-        }
-        .navbar .top-navbar .nav-items .nav-item{
-            font-size:2.5rem;
-            letter-spacing:1.12px;
-        }
-        .navbar .top-navbar .nav-items .nav-item a {
-            color: white;
-        }
-        .quote{
-            font-weight: normal;
-            line-height: 35px;
-        }
-        .order-btn{
-            width:38%;
-            height:37px;
-            letter-spacing:.15rem;
-        }
-        .order-btn h1{
-            font-size:2rem;
-        }
-        .coffee-type .italic-title{
-            text-align:center;
-            margin-bottom:0rem;
-        }
-        .coffee-page .coffee-type .italic-title h1, .cold-coffee-type .italic-title h1 {
-            letter-spacing: 1px;
-            line-height: 8rem;
-            font-size: 6rem;
-            margin-bottom:2rem;
-        }
-        .item{
-            display:table;
-        }
-        .coffee-type .italic-title h1 br, .cold-coffee-type .italic-title h1 br{
-            display:none;
-        }
-        .coffee-page .row{
-            margin-left:0;
-            padding-top:2rem;
-        }
-        .coffee_bg{
-            display:none;
-        }
-        .coffee, .cold-coffee-img{
-            width:36%;
-        }
-        .coffee{
-            left:0;
-            transform:translateX(10%);
-        }
-        .cold-coffee-img{
-            left:45%;
-            transform:translate(55%,0%);
-        }
-        .coffee-type{
-            justify-content:center;
-            align-items:center;
-        }       
-        .drk_coffee_paracontainer{
-            background:#122341;
-            height:auto;
-            padding: 2rem 0 2rem 0;
-            margin:2rem 0 2rem 0;
-            position:relative;
-        }
-        .shape-playground-1{
-            float: left;
-            width: 46%;
-            height: 219px;
-            margin:0;
-            border-radius: 50%;
-            display: block;
-            shape-outside:circle(40.81% at 58px 127px) content-box;
-        }
-        .shape-playground-2{
-            display: block;
-            float: right;
-            width: 47%;
-            height: 219px;
-            margin:0;
-            shape-outside:circle(42.84% at 85px 134px) content-box;
-        }
-        .dark-hot-coffees-para{
-            text-align: justify;
-            padding-right: 2rem;
-            font-size:1.3rem;
-            line-height:2.5rem;
-            width: 100%;
-            position:static;
-            transform:translate(0);
-        }
-        .cold-coffee-type{        
-            display:table-header-group;
-            text-align: center;      
-        }
-        .cold-coffee-type .italic-title{
-            margin-bottom:2rem;
-        }
-        .cold-coffee-type .order-btn{
-            margin:0 auto;
-        }    
-        .cold_coffee_paracontainer, .hot_coffee_paracontainer{
-            background:#122341;
-            height:auto;
-            padding: 2rem 0 2rem 0;
-            margin:2rem 0 2rem 0;
-            width:100%;
-            order:2;
-        }
-        .cold_coffee_paracontainer{
-            display:table-footer-group;
+    .logo{
+        display:none;
+    }
     
-        }
-        .cold-coffees-para{
-            font-size: 1.3rem;
-            width: 100%;
-            line-height:2.5rem;
-            padding-left: 2rem;      
-            position: static;
-            transform: translate(0);
-            text-align: justify;
-        }    
-        .hot_coffee_paracontainer{
-            width: 100%;
-        } 
-        .coffee-page  .row .cold_coffee_paracontainer, .coffee-page .row .cold-coffee-type {
-            position: static;
-        }  
-        .coffee-page .row .cold-coffee-type{
-            transform: translateX(0);
-        }  
-        .leaf-pic{
-            display: none;
-        }
-        .voucher-border-box{
-            height:auto;
-            margin:4rem 2rem 4rem 2rem;
-        }
-        .gift-images{
-            align-items:center;
-        }
-        .blue-circle{
-            width:200px;
-            height:200px;
-            margin:2rem 0 0 0;
-        }
-        .blue-circle h1{
-            font-size:5rem;
-            margin-top:1rem;
-        }
-        .voucher-desc{
-            padding-right:0;
-            padding-top:3rem;
-        } 
+    .order-btn h1{
+        font-size:3.2rem;
+    }
+    .homepage{
+        background: linear-gradient(to bottom, hsla(0, 54%, 27%, 0.2), hsla(40, 1%, 55%, 0.1)), url('../img/homepage_background.png');
+        background-repeat: no-repeat;
+        background-size:cover;
+        background-position: center;
+        height:auto;
+    }
+    .paragraph{
+        width:100%;
+        text-align:left;
+        margin: 2.5rem 0 2.5rem 0;
+    }
+    .paragraph p{
+        font-weight: 400;
+    }
+    .pg-content{
+        margin-top:0;
+        position:static;
+        padding-bottom: 5rem;
+        padding-top:15rem;
+        margin-left:1.5rem;
+    }
+    .pg-content .italic-title h1{
+        text-align:center;
+    }
+    .navbar{
+        position:fixed;
+        background:#122341;
+        z-index: 10;
+        width:100%;
+        left:0;
+        padding-top:0;
+    }
+    .navbar-toggler:focus,
+    .navbar-toggler:active,
+    .navbar-toggler-icon:focus {
+        outline: none;
+        box-shadow: none;
+    }
+    .navbar-toggler{
+        font-size:2.25rem;
+        width:100%;
+        text-align:left;
+        height:80px;
+    }
+    .nav-items{
+        float:right;
+        text-align:right;
+    }
+    #hamburger_menu{
+        line-height:4rem;
+        color:white;
+    }
+    .navbar .top-navbar .nav-items .nav-item{
+        font-size:2.5rem;
+        letter-spacing:1.12px;
+    }
+    .navbar .top-navbar .nav-items .nav-item a {
+        color: white;
+    }
+    .quote{
+        font-weight: normal;
+        line-height: 35px;
+    }
+    .order-btn{
+        width:38%;
+        height:37px;
+        letter-spacing:.15rem;
+    }
+    .order-btn h1{
+        font-size:2rem;
+    }
+    .coffee-type .italic-title{
+        text-align:center;
+        margin-bottom:0rem;
+    }
+    .coffee-page .coffee-type .italic-title h1, .cold-coffee-type .italic-title h1 {
+        letter-spacing: 1px;
+        line-height: 8rem;
+        font-size: 6rem;
+        margin-bottom:2rem;
+    }
+    .item{
+        display:table;
+    }
+    .coffee-type .italic-title h1 br, .cold-coffee-type .italic-title h1 br{
+        display:none;
+    }
+    .coffee-page .row{
+        margin-left:0;
+        padding-top:2rem;
+    }
+    .coffee_bg{
+        display:none;
+    }
+    .coffee, .cold-coffee-img{
+        width:36%;
+    }
+    .coffee{
+        left:0;
+        transform:translateX(10%);
+    }
+    .cold-coffee-img{
+        left:45%;
+        transform:translate(55%,0%);
+    }
+    .coffee:hover{
+        animation:none;
+    }
+    .cold-coffee-img:hover{
+        animation:none;
+    }
+    .coffee-type{
+        justify-content:center;
+        align-items:center;
+    }       
+    .drk_coffee_paracontainer{
+        background:#122341;
+        height:auto;
+        padding: 2rem 0 2rem 0;
+        margin:2rem 0 2rem 0;
+        position:relative;
+    }
+    .shape-playground-1{
+        float: left;
+        width: 46%;
+        height: 219px;
+        margin:0;
+        border-radius: 50%;
+        display: block;
+        shape-outside:circle(40.81% at 58px 127px) content-box;
+    }
+    .shape-playground-2{
+        display: block;
+        float: right;
+        width: 47%;
+        height: 219px;
+        margin:0;
+        shape-outside:circle(42.84% at 85px 134px) content-box;
+    }
+    .dark-hot-coffees-para{
+        text-align: justify;
+        padding-right: 2rem;
+        font-size:1.3rem;
+        line-height:2.5rem;
+        width: 100%;
+        position:static;
+        transform:translate(0);
+    }
+    .cold-coffee-type{        
+        display:table-header-group;
+        text-align: center;      
+    }
+    .cold-coffee-type .italic-title{
+        margin-bottom:2rem;
+    }
+    .cold-coffee-type .order-btn{
+        margin:0 auto;
+    }    
+    .cold_coffee_paracontainer, .hot_coffee_paracontainer{
+        background:#122341;
+        height:auto;
+        padding: 2rem 0 2rem 0;
+        margin:2rem 0 2rem 0;
+        width:100%;
+        order:2;
+    }
+    .cold_coffee_paracontainer{
+        display:table-footer-group;
+
+    }
+    .cold-coffees-para{
+        font-size: 1.3rem;
+        width: 100%;
+        line-height:2.5rem;
+        padding-left: 2rem;      
+        position: static;
+        transform: translate(0);
+        text-align: justify;
+    }    
+    .hot_coffee_paracontainer{
+        width: 100%;
+    } 
+    .coffee-page  .row .cold_coffee_paracontainer, .coffee-page .row .cold-coffee-type {
+        position: static;
+    }  
+    .coffee-page .row .cold-coffee-type{
+        transform: translateX(0);
+    }  
+    .leaf-pic{
+        display: none;
+    }
+    .voucher-border-box{
+        height:auto;
+        margin:4rem 2rem 4rem 2rem;
+    }
+    .gift-images{
+        align-items:center;
+    }
+    .blue-circle{
+        width:200px;
+        height:200px;
+        margin:2rem 0 0 0;
+    }
+    .blue-circle h1{
+        font-size:5rem;
+        margin-top:1rem;
+    }
+    .voucher-desc{
+        padding-right:0;
+        padding-top:3rem;
+    } 
+    
+    .voucher-desc .italic-title h1{
+        font-size:4.5rem;
+        margin-bottom:0rem;
+    }
+    .voucher-desc .paragraph{
+        width:92%;
+        text-align:center;
+    }
+    .cup-of-coffee{
+        width:60%;
+        height:43px;
+        border: 3px solid #df4b0f;
+    }
+    .cup-of-coffee h1{
+        font-size:1.5rem;
+        letter-spacing: 1.5px;
+    }
+    .about-us-page{
+        height:auto;
+        margin:2rem 0 1rem 0;
+        padding-bottom:2.5rem;
+    }
+    .about-us-para{
+        padding:0 3rem 0 3rem;
+        text-align:justify;
+        font-size:2rem;
+        line-height:2.5rem;
+    }
+    #blog{
+        margin-top:2rem;
+    }
+    #blog .italic-title {
+        padding: 0 8px;
+    }
+    .testimonials{
+        margin: 2rem;
+    }
+    .testimonials .row{
+        padding:15px;
+        align-items: center;
+    }
+    .customer{
+        padding:0;
+    }
+    .customer h1{
+        font-size:4rem;
+        margin-top:2.2rem;
+    }
+    .customer p{
+        font-size:1.5rem;
+        font-weight: normal;
+        text-align:justify;    
+    }
+    .opening-days{
+        margin-top:4rem;
+    }
+    .days-block{
+        width:78%;
+        margin-bottom: 4rem;
+        word-spacing: .5rem;
+        height:120px;
+    }
+    .days-block h1{
+        font-size:1.5rem;
+    }
+    .branches-part{
+        margin:0 3rem 5rem 3rem;
+    }
+    .cities{
+        margin-bottom:2rem;
+    }
+    .cities-margin{
+        padding:0 0 10px 0;
+    }
+    .city-bubble{
+        max-width:180px;
+        height:48px;
+    }
+    
+    .city-bubble::after {
+        bottom:-17px;
+        left:15%;
+    }
+    .city-bubble h1{
+        margin-left:2rem;
+        font-size:3rem;
+    }
+    .city-desc{
+        height:auto;
+        padding-top:2rem;
+        padding-bottom: 2rem;
+    }
+    .bottom-part{
+        padding-top:1.875rem;
+        padding-bottom: 1rem;
+        margin-top:5rem;
+        height:auto;
+    }
+    .info_p{
+        display:flex;
+        flex-wrap: wrap;
+        flex-direction: row;
         
-        .voucher-desc .italic-title h1{
-            font-size:4.5rem;
-            margin-bottom:0rem;
-        }
-        .voucher-desc .paragraph{
-            width:92%;
-            text-align:center;
-        }
-        .cup-of-coffee{
-            width:60%;
-            height:43px;
-            border: 3px solid #df4b0f;
-        }
-        .cup-of-coffee h1{
-            font-size:1.5rem;
-            letter-spacing: 1.5px;
-        }
-        .about-us-page{
-            height:auto;
-            margin:2rem 0 1rem 0;
-            padding-bottom:2.5rem;
-        }
-        .about-us-para{
-            padding:0 3rem 0 3rem;
-            text-align:justify;
-            font-size:2rem;
-            line-height:2.5rem;
-        }
-        #blog{
-            margin-top:2rem;
-        }
-        #blog .italic-title {
-            padding: 0 8px;
-        }
-        .testimonials{
-            margin: 2rem;
-        }
-        .testimonials .row{
-            padding:15px;
-            align-items: center;
-        }
-        .customer{
-            padding:0;
-        }
-        .customer h1{
-            font-size:4rem;
-            margin-top:2.2rem;
-        }
-        .customer p{
-            font-size:1.5rem;
-            font-weight: normal;
-            text-align:justify;    
-        }
-        .opening-days{
-            margin-top:4rem;
-        }
-        .days-block{
-            width:78%;
-            margin-bottom: 4rem;
-            word-spacing: .5rem;
-            height:120px;
-        }
-        .days-block h1{
-            font-size:1.5rem;
-        }
-        .branches-part{
-            margin:0 3rem 5rem 3rem;
-        }
-        .cities{
-            margin-bottom:2rem;
-        }
-        .cities-margin{
-            padding:0 0 10px 0;
-        }
-        .city-bubble{
-            max-width:180px;
-            height:48px;
-        }
-        
-        .city-bubble::after {
-            bottom:-17px;
-            left:15%;
-        }
-        .city-bubble h1{
-            margin-left:2rem;
-            font-size:3rem;
-        }
-        .city-desc{
-            height:auto;
-            padding-top:2rem;
-            padding-bottom: 2rem;
-        }
-        .bottom-part{
-            padding-top:1.875rem;
-            padding-bottom: 1rem;
-            margin-top:5rem;
-            height:auto;
-        }
-        .info_p{
-            display:flex;
-            flex-wrap: wrap;
-            flex-direction: row;
-            
-        }
-        .info_p p{
-            padding-right: 3rem;
-        }
-        .middle-footer h2, .bottom-footer h2{
-            padding-bottom:2rem;
-            margin-top:2rem;
-            font-size:3rem;
-        }
-        .bottom-footer h2{
-            margin-bottom:2.5rem;
-        }
-        .bottom-footer h5{
-            display:none;
-        }
-        .bottom-part .row{
-            margin:0 3rem 0 3rem;
-        }
-        .left-footer .heading{
-            text-align: center;
-            padding-bottom:3rem;
-        }
-        .left-footer .img-logo{
-            margin-bottom:2rem;
-        }
-        .social-media{
-            letter-spacing:1rem;
-            left:3.5rem;
-            bottom:1rem;
-        }
-        .footer-navbar{
-           display:none;
-        }  
+    }
+    .info_p p{
+        padding-right: 3rem;
+    }
+    .middle-footer h2, .bottom-footer h2{
+        padding-bottom:2rem;
+        margin-top:2rem;
+        font-size:3rem;
+    }
+    .bottom-footer h2{
+        margin-bottom:2.5rem;
+    }
+    .bottom-footer h5{
+        display:none;
+    }
+    .bottom-part .row{
+        margin:0 3rem 0 3rem;
+    }
+    .left-footer .heading{
+        text-align: center;
+        padding-bottom:3rem;
+    }
+    .left-footer .img-logo{
+        margin-bottom:2rem;
+    }
+    .social-media{
+        letter-spacing:1rem;
+        left:3.5rem;
+        bottom:1rem;
+    }
+    .footer-navbar{
+        display:none;
+    }  
 }
